Modified README to reflect changes to CMakeLists

--- a/README
+++ b/README
@@ -1,8 +1,8 @@
 To build project, make directory "build" and cd to it. Then use the commands:
-cmake ..
+cmake ../src
 make
 
 To setup Makefile with SFML-2 in a non-standard directory:
-cmake -D SFML_ROOT=${Directory} ..
+cmake -D SFML_ROOT=${Directory} ../src
 
 To set install directory, use -D CMAKE_INSTALL_PREFIX=${Directory}
