--- a/README
+++ b/README
@@ -7,6 +7,9 @@ cmake -D SFML_ROOT=${Directory} ../src
 
 To set install directory, use -D CMAKE_INSTALL_PREFIX=${Directory}
 
+To find ResourcePacker if installed in non standard directory,
+use -D CMAKE_PREFIX_PATH=${pathToResourcePackerRoot}
+
 To add Eclipse project files, add the option:
 -G"Eclipse CDT4 - Unix Makefiles"
 
