--- a/README
+++ b/README
@@ -1,5 +1,6 @@
 
 Gradle builds with the expectation that the host platform is Arch Linux 64-bit with multilib-gcc and mingw-w64 installed. If your platform is different, build using cmake instead.
+The CMakeLists.txt file is located in src/
 
 To see what build tasks are available, run ./gradlew tasks
 
